--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: '>=3.1.2 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,12 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+
   fl_chart: ^0.41.0
   charts_flutter: ^0.12.0
   csv: ^5.1.1
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -62,8 +60,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  assets:
-  - ./data/datapenjualan.csv
+
+  assets: 
+    - data/datapenjualan.csv
 
   # To add assets to your application, add an assets section, like this:
   # assets:
